unpackaged/main/default/objects/litify_ext__Availability__c/litify_ext__Availability__c.object-meta.xml
<CustomObject>
    <label>Availability</label>
    <nameField>
        <displayFormat>Avail-{00000}</displayFormat>
        <label>Availability Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Availabilities</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>