unpackaged/main/default/objects/litify_ext__Availability__c/fields/litify_ext__Appointment_Holder__c.field-meta.xml
<CustomField>
    <fullName>litify_ext__Appointment_Holder__c</fullName>
    <label>Appointment Holder</label>
    <referenceTo>litify_ext__Appointment_Holder__c</referenceTo>
    <relationshipLabel>Availabilities</relationshipLabel>
    <relationshipName>Availabilities</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>