unpackaged/main/default/objects/litify_ext__Availability__c/fields/litify_ext__Appointment_Types__c.field-meta.xml
<CustomField>
    <fullName>litify_ext__Appointment_Types__c</fullName>
    <label>Appointment Types</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>litify_ext__Appointment_Types</valueSetName>
    </valueSet>
</CustomField>