unpackaged/main/default/objects/litify_ext__Availability__c/fields/litify_ext__End_Date__c.field-meta.xml
<CustomField>
    <fullName>litify_ext__End_Date__c</fullName>
    <inlineHelpText>The last day this availability applies to. Leave blank if it never expires.</inlineHelpText>
    <label>End Date</label>
    <type>Date</type>
</CustomField>