unpackaged/main/default/objects/litify_ext__Availability__c/fields/litify_ext__End_Time__c.field-meta.xml
<CustomField>
    <fullName>litify_ext__End_Time__c</fullName>
    <label>End Time</label>
    <type>Time</type>
</CustomField>