unpackaged/main/default/objects/litify_ext__Availability__c/fields/litify_ext__Location_Zones__c.field-meta.xml
<CustomField>
    <fullName>litify_ext__Location_Zones__c</fullName>
    <label>Location Zones</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>litify_ext__Appointment_Location_Zones</valueSetName>
    </valueSet>
</CustomField>