unpackaged/main/default/objects/litify_ext__Availability__c/fields/litify_ext__Start_Date__c.field-meta.xml
<CustomField>
    <fullName>litify_ext__Start_Date__c</fullName>
    <inlineHelpText>The first day this availability applies to.</inlineHelpText>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>