unpackaged/main/default/objects/litify_ext__Availability__c/listViews/litify_ext__Active.listView-meta.xml
<ListView>
    <fullName>litify_ext__Active</fullName>
    <columns>litify_ext__Appointment_Holder__c</columns>
    <columns>litify_ext__Location_Zones__c</columns>
    <columns>litify_ext__Days_of_the_Week__c</columns>
    <columns>litify_ext__Start_Time__c</columns>
    <columns>litify_ext__End_Time__c</columns>
    <columns>litify_ext__Start_Date__c</columns>
    <columns>litify_ext__End_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>litify_ext__Start_Date__c</field>
        <operation>lessOrEqual</operation>
        <value>TODAY</value>
    </filters>
    <filters>
        <field>litify_ext__End_Date__c</field>
        <operation>greaterOrEqual</operation>
        <value>TODAY</value>
    </filters>
    <label>Active</label>
</ListView>