unpackaged/main/default/objects/litify_ext__Availability__c/listViews/litify_ext__All.listView-meta.xml
<ListView>
    <fullName>litify_ext__All</fullName>
    <columns>litify_ext__Appointment_Holder__c</columns>
    <columns>litify_ext__Location_Zones__c</columns>
    <columns>litify_ext__Days_of_the_Week__c</columns>
    <columns>litify_ext__Start_Time__c</columns>
    <columns>litify_ext__End_Time__c</columns>
    <columns>litify_ext__Start_Date__c</columns>
    <columns>litify_ext__End_Date__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>